end to end test in tailing && fixed schema in arrow logs and metrics && updated to use application_host